// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thing with base, 1 property and 1 action 1`] = `
"{
    \\"name\\": \\"Testthing\\",
    \\"type\\": \\"Thing\\",
    \\"href\\": \\"\\",
    \\"properties\\": {
        \\"testProperty\\": {
            \\"type\\": \\"integer\\",
            \\"description\\": \\"Test Property Description\\",
            \\"href\\": \\"undefined/things/testthing/properties/testproperty\\"
        }
    },
    \\"actions\\": {
        \\"testAction\\": {
            \\"description\\": \\"Test Action Description\\"
        }
    },
    \\"events\\": {}
}"
`;

exports[`thing without base, 1 property with multiple links 1`] = `
"{
    \\"name\\": \\"Testthing\\",
    \\"type\\": \\"Thing\\",
    \\"href\\": \\"\\",
    \\"properties\\": {
        \\"testProperty\\": {
            \\"type\\": \\"integer\\",
            \\"href\\": \\"undefined/things/testthing/properties/testproperty\\"
        }
    },
    \\"actions\\": {},
    \\"events\\": {}
}"
`;
